<resources>
    <string name="app_name">Clothing Store</string>

    <string name="nav_home">Trang chủ</string>
    <string name="nav_shopping_cart">Giỏ hàng</string>
    <string name="nav_user">Tôi</string>
    <string name="nav_notification">Thông báo</string>

    <!--    COMMON-->
    <string name="cancel">Hủy</string>
    <string name="label_ok">Xác nhận</string>
    <string name="has_error_please_retry">Có lỗi xảy ra, vui lòng thử lại!</string>
    <string name="channel_name">Thông báo</string>
    <string name="channel_description">Thông báo OTP</string>
    <string name="required_permission_notification">Vui lòng cấp quyền truy cập thông báo</string>
    <string name="required_filed">Trường này là bắt buộc</string>
    <string name="label_finish">Hoàn thành</string>
    <string name="can_not_success">Không thành công</string>
    <string name="success">Thành công</string>

    <!--    ONBOARDING-->
    <string name="label_skip">Bỏ qua</string>
    <string name="onboarding_1"><font color="#704F38">Seamless</font> Shopping \nExperience</string>
    <string name="onboarding_2"><font color="#704F38">Swift</font> and <font color="#704F38">Reliable</font>\nDelivery</string>
    <string name="welcome_text">The <font color="#704F38">Fashion App</font> That \nMakes You Look Your Best</string>
    <string name="let_get_start">Bắt đầu</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="have_not_account">Bạn chưa có tài khoản? </string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu a
    </string>
    <!--  HOME  -->
    <string name="label_location">Khu vực</string>
    <string name="todo">TODO</string>
    <string name="search">Tìm kiếm</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="sale_close_in">Kết thúc</string>


    <!--    Cart-->
    <string name="total_payment">Tổng thanh toán</string>
    <string name="buy_now">Mua ngay</string>
    <string name="not_found_item_in_cart">Chưa có sản phẩm nào trong giỏ hàng.</string>
    <string name="label_color">Màu sắc: %s</string>
    <string name="label_size">Size: %s</string>
    <string name="title_header_cart">Giỏ hàng</string>
    <string name="please_select_item">Vui lòng chọn sản phẩm trước khi tiếp tục</string>

    <!--   LOGIN -->
    <string name="hi_welcome_back">Xin chào! Chào mừng bạn trở lại, chúng tôi đã nhớ bạn</string>
    <string name="label_password">Mật khẩu</string>
    <string name="forgot_pass"><u>Quên mật khẩu?</u></string>
    <string name="or_other_login">Hoặc</string>
    <string name="login_with_google">Đăng nhập với Google</string>
    <string name="haven_account">Bạn chưa có tài khoản? </string>
    <string name="sign_up">Đăng ký</string>
    <string name="label_create_account">Tạo tài khoản</string>
    <string name="content_sign_up">Điền thông tin của bạn xuống bên dưới, hoặc đăng ký với tài khoản xã hội</string>
    <string name="has_account">Bạn đã có tài khoản? </string>
    <string name="loading">Đang xử lý …</string>
    <string name="account_empty">Tài khoản hoặc mật khẩu không được để trống</string>
    <string name="verify_otp">Xác thực mã OTP</string>
    <string name="guide_input_otp">Nhập mã OTP được gửi đến thiết bị của bạn xuống dưới</string>
    <string name="enter_otp">Nhập mã OTP:</string>
    <string name="re_send">Gửi lại</string>

    <!--    Notification-->
    <string name="read_all">Đánh dấu đã đọc tất cả</string>


    <!--    User-->
    <string name="purchase">Đơn mua</string>
    <string name="purchased_history">Lịch sử mua hàng</string>">
    <string name="label_coupon">Mã giảm giá</string>
    <string name="label_product_like">Sản phẩm yêu thích</string>
    <string name="label_bounty_hunting">Săn thưởng</string>
    <string name="label_method_payment">Phương thức thanh toán</string>
    <string name="label_settings">Thiết lập tài khoản</string>


    <!--    Order-->
    <string name="label_order">Đặt hàng</string>
    <string name="shipping_address">Địa chỉ nhận hàng</string>
    <string name="label_list_product">Danh sách sản phẩm</string>
    <string name="label_add_voucher">Thêm voucher</string>
    <string name="label_select_voucher">Chọn mã voucher</string>
    <string name="label_payment_at_home">Thanh toán sau khi nhận hàng</string>
    <string name="payment_details">Chi tiết thanh toán</string>
    <string name="total_cost">Tổng tiền hàng</string>
    <string name="shipping_cost">Phí vận chuyển</string>
    <string name="voucher_discount">Phiếu giảm giá</string>
    <string name="please_add_address">Cần bổ sung thêm thông tin địa chỉ nhận hàng để tiếp tục thực hiện</string>

    <!--    Product-->
    <string name="information_product_details">Thông tin chi tiết</string>
    <string name="select_size">Chọn size</string>
    <string name="label_classify">Phân loại: </string>
    <string name="default_btn_add_to_cart">Thêm: %s</string>
    <string name="add_to_card_success">Thêm giỏ hàng thành công!</string>

    <!--    Settings-->
    <string name="setting_nav_address">Địa chỉ nhận hàng</string>
    <string name="setting_nav_color_system">Màu hệ thống</string>
    <string name="title_header_settings">Cài đặt</string>
    <string name="title_info_contact">Thông tin liên hệ</string>
    <string name="header_address_delivery">Thông tin nhận hàng</string>
    <string name="header_update_address">Cập nhật thông tin nhận hàng</string>
    <string name="header_add_new_address">Thêm thông tin nhận hàng</string>
    <string name="full_name">Họ và tên</string>
    <string name="number_phone">Số điện thoại</string>

    <!--    Order-->
    <string name="title_header_order">Lịch sử mua hàng</string>
    <string name="tab_item_pending">Chờ xác nhận</string>
    <string name="tab_item_processing">Đang xử lý</string>
    <string name="tab_item_history">Đã mua</string>
    <string name="tab_item_review">Đánh giá</string>
    <string name="tab_item_canceled">Đã hủy</string>
    <string name="str_quantity">x%s sản phẩm</string>


    <string name="label_home_payment">Thanh toán tại nhà</string>
    <string name="label_zalo_pay_payment">Thanh toán bằng ví điện tử ZaloPay</string>
    <string name="label_momo_payment">Thanh toán bằng ví điện tử Momo</string>

    <string name="title_header_voucher">Mã giảm giá của tôi</string>
    <string name="label_info_detail">Thông tin chi tiết</string>

    <string name="title_header_notification">Thông báo</string>

    <string name="more">Xem thêm</string>
    <string name="ellipsis">...</string>
    <string name="content_logout">Bạn chắc chắn muốn đăng xuất?</string>
    <string name="not_found_voucher">Ôi! Không tìm thấy mã giảm giá rồi ...</string>

    <string name="rdo_pay_home">Thanh toán tại nhà</string>
    <string name="rdo_pay_zalopay">Ví điện tử ZaloPay</string>
    <string name="rdo_pay_momo">Ví điện tử MOMO</string>

</resources>