<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:orientation="vertical">

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <LinearLayout
           android:id="@+id/layout_image"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="50dp"
           android:gravity="center"
           android:orientation="horizontal"
           android:paddingVertical="10dp">

           <androidx.cardview.widget.CardView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginEnd="15dp"
               app:cardCornerRadius="50dp">

               <ImageView
                   android:layout_width="200dp"
                   android:layout_height="300dp"
                   android:src="@drawable/welcome_img1" />
           </androidx.cardview.widget.CardView>

           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:orientation="vertical">

               <androidx.cardview.widget.CardView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   app:cardCornerRadius="40dp">

                   <ImageView
                       android:layout_width="120dp"
                       android:layout_height="150dp"
                       android:contentDescription="@string/todo"
                       android:src="@drawable/welcome_img2" />
               </androidx.cardview.widget.CardView>

               <com.google.android.material.imageview.ShapeableImageView
                   android:layout_width="120dp"
                   android:layout_height="130dp"
                   android:layout_marginTop="20dp"
                   android:scaleType="centerCrop"
                   app:shapeAppearance="@style/one_rounded"
                   android:src="@drawable/welcome_img3"/>

           </LinearLayout>
       </LinearLayout>

       <TextView
           android:id="@+id/title"
           android:layout_below="@id/layout_image"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="50dp"
           android:text="@string/welcome_text"
           android:textAlignment="center"
           android:textSize="25sp"
           android:textStyle="bold" />

       <TextView
           android:layout_below="@id/title"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="25dp"
           android:text="@string/lorem_ipsum"
           android:textAlignment="center"
           android:textColor="@color/gray"
           android:textSize="15sp" />

       <androidx.appcompat.widget.AppCompatButton
           android:layout_above="@id/layout_bottom"
           android:id="@+id/btnLetsStart"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginHorizontal="15dp"
           android:layout_marginTop="45dp"
           android:background="@drawable/btn_out_line"
           android:text="@string/let_get_start"
           android:textColor="@color/text_primary"
           android:textSize="@dimen/text_size_default" />

       <LinearLayout
           android:id="@+id/layout_bottom"
           android:layout_marginBottom="@dimen/_10sdp"
           android:layout_alignParentBottom="true"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="30dp"
           android:gravity="center"
           android:orientation="horizontal">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/have_not_account"
               android:textSize="@dimen/text_size_default" />

           <TextView
               android:id="@+id/tvSignIn"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/sign_in"
               android:layout_marginStart="@dimen/_5sdp"
               android:textColor="@color/blue"
               android:textSize="@dimen/text_size_default" />
       </LinearLayout>
   </RelativeLayout>
</RelativeLayout>