<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:clipChildren="false"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="@dimen/_3sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/btn_out_line"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/Text.Bold"
            android:text="@string/app_name"/>
        <TextView
            android:id="@+id/tv_body"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_default"
            android:text="@string/lorem_ipsum"
            android:fontFamily="@font/inter_medium"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_5sdp">
            <androidx.appcompat.widget.AppCompatButton
                android:background="@color/transparent"
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/text_primary"
                android:fontFamily="@font/inter_medium" />
            <View
                android:layout_width="@dimen/_10sdp"
                android:layout_height="1dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:background="@color/transparent"
                android:id="@+id/btn_ok"
                android:layout_width="0dp"
                android:textSize="@dimen/_12sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_weight="1"
                android:text="@string/label_ok"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/inter_medium"/>
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>