<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_10sdp"
    app:contentPadding="@dimen/_10sdp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Phương thức thanh toán"
            style="@style/Text.Bold"
            android:layout_margin="@dimen/_10sdp"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rdo_zlp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rdo_pay_zalopay"
                android:textDirection="ltr"
                android:layoutDirection="rtl"
                android:textSize="@dimen/text_size_default"
                android:fontFamily="@font/inter_regular"
                android:padding="@dimen/_10sdp"/>
            <RadioButton
                android:id="@+id/rdo_momo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rdo_pay_momo"
                android:textDirection="ltr"
                android:layoutDirection="rtl"
                android:textSize="@dimen/text_size_default"
                android:fontFamily="@font/inter_regular"
                android:padding="@dimen/_10sdp"/>
            <RadioButton
                android:id="@+id/rdo_home"
                android:checked="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rdo_pay_home"
                android:textDirection="ltr"
                android:layoutDirection="rtl"
                android:textSize="@dimen/text_size_default"
                android:fontFamily="@font/inter_regular"
                android:padding="@dimen/_10sdp"/>
        </RadioGroup>
    </LinearLayout>
</androidx.cardview.widget.CardView>