<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main"
    >

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:id="@+id/swipRefresh"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/background"
            android:layout_height="match_parent">
            <include layout="@layout/layout_header"
                android:id="@+id/header"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_below="@id/header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/layout_bottom">
                <!--    Skeleton-->
                <com.facebook.shimmer.ShimmerFrameLayout
                    android:visibility="gone"
                    android:id="@+id/shimmer_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <include layout="@layout/my_cart_skeleton"/>
                </com.facebook.shimmer.ShimmerFrameLayout>

                <!--    Chưa có sản phẩm trong giỏ hàng-->
                <LinearLayout
                    android:id="@+id/lnNotCart"
                    android:visibility="gone"
                    android:layout_marginTop="250dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/online_shopping"/>
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/not_found_item_in_cart"/>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout_bottom"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:elevation="@dimen/_4sdp"
                android:gravity="right"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:gravity="right"
                    android:orientation="vertical"
                    tools:ignore="RtlHardcoded">

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_payment"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/tvSumMoney"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_red"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnBuyProduct"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/buy_now"
                    android:background="@drawable/bg_square_effect_press"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </RelativeLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>