<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_marginHorizontal="@dimen/_10sdp"
    android:layout_marginTop="@dimen/_5sdp"
    android:paddingBottom="@dimen/_5sdp"
    android:gravity="center"
    android:background="@color/background"
    android:layout_height="wrap_content">
    <CheckBox
        android:id="@+id/checkbox"
        android:layout_marginEnd="@dimen/_3sdp"
        android:layout_width="@dimen/_20sdp"
        android:backgroundTint="@color/colorPrimary"
        android:layout_height="@dimen/_20sdp"/>
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgProduct"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_gravity="center"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Rounded"
        app:srcCompat="@drawable/welcome_img1"
        android:scaleType="centerCrop"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/nameProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum"
            android:textSize="@dimen/_13sdp"
            android:lines="1"
            android:ellipsize="end"
            android:fontFamily="@font/inter_bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_color"
                android:textSize="14sp"
                android:ellipsize="end"
                android:lines="1"
                android:fontFamily="@font/inter_medium"
                android:textColor="@color/gray"/>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_weight="0.5"
                   android:orientation="vertical">
                   <TextView
                       android:id="@+id/tvSize"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/label_size"
                       android:lines="1"
                       android:textSize="14sp"
                       android:ellipsize="end"
                       android:fontFamily="@font/inter_medium"
                       android:textColor="@color/gray"/>
                   <TextView
                       android:id="@+id/tvPrice"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="50.000đ"
                       android:textColor="@color/color_red"
                       android:fontFamily="@font/inter_bold"/>
               </LinearLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:layout_weight="0.5"
                   android:gravity="center"
                   android:orientation="horizontal">
                   <ImageButton
                       android:id="@+id/btnDown"
                       android:layout_width="25dp"
                       android:layout_height="25dp"
                       android:background="@drawable/btn_up_down"
                       android:src="@drawable/baseline_remove_24"
                       app:tint="@color/color_icon" />
                   <TextView
                       android:id="@+id/tvQuantity"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="10"
                       android:textSize="15sp"
                       android:layout_marginHorizontal="5dp"
                       android:fontFamily="@font/inter_bold"/>
                   <ImageButton
                       android:id="@+id/btnUp"
                       android:layout_width="25dp"
                       android:layout_height="25dp"
                       android:contentDescription="@string/todo"
                       app:tint="@color/color_icon"
                       android:background="@drawable/btn_up_down"
                       android:src="@drawable/baseline_add_24"/>
               </LinearLayout>
           </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>